force-app/main/default/objects/Reference_Adoption_Agreement_Review__c/Reference_Adoption_Agreement_Review__c.object-meta.xml
<CustomObject>
    <description>This reference object is created when a case is created with the Adoption Agreement Review Record Type.</description>
    <label>Reference Adoption Agreement Review</label>
    <nameField>
        <displayFormat>Adoption Agreement-{000000}</displayFormat>
        <label>Reference Adoption Agreement Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference Adoption Agreement Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>