force-app/main/default/objects/Reference_Adoption_Agreement_Review__c/fields/Accepted_Verification_of_Sponspor__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Verification_of_Sponspor__c</fullName>
    <label>Accepted Verification of Sponspor</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Articles of Organization/Articles of Incorporation</fullName>
            </value>
            <value>
                <fullName>Unexpired drivers license if name matches exactly on MATC agreement and AA</fullName>
            </value>
            <value>
                <fullName>Valid Passport</fullName>
            </value>
            <value>
                <fullName>Recent 941 that matches paperwork</fullName>
            </value>
            <value>
                <fullName>Prior 5500 that matches paperwork</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>