force-app/main/default/objects/Reference_Adoption_Agreement_Review__c/fields/Age_Requirement_ER_Match__c.field-meta.xml
<CustomField>
    <fullName>Age_Requirement_ER_Match__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Age Requirement (ER Match)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>