force-app/main/default/objects/Reference_Adoption_Agreement_Review__c/fields/Allow_Flat_Dollar_Deferrals__c.field-meta.xml
<CustomField>
    <fullName>Allow_Flat_Dollar_Deferrals__c</fullName>
    <label>Allow Flat Dollar Deferrals</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>