force-app/main/default/objects/Reference_Adoption_Agreement_Review__c/fields/Bank_Account_Information_Valid__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Information_Valid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bank Account Information Valid</label>
    <type>Checkbox</type>
</CustomField>