force-app/main/default/objects/Reference_Adoption_Agreement_Review__c/fields/Basic_Match__c.field-meta.xml
<CustomField>
    <fullName>Basic_Match__c</fullName>
    <label>Basic Match</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>