force-app/main/default/objects/Reference_Adoption_Agreement_Review__c/fields/Bis_ID__c.field-meta.xml
<CustomField>
    <fullName>Bis_ID__c</fullName>
    <formula>Prospect_Client__r.Bis_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bis ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>