force-app/main/default/objects/Reference_Adoption_Agreement_Review__c/fields/Case_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Case_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Lookup</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Reference Adoption Agreement Reviews</relationshipLabel>
    <relationshipName>Reference_Adoption_Agreement_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>