force-app/main/default/objects/Reference_Adoption_Agreement_Review__c/fields/Client_Relationship_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Client_Relationship_Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Relationship Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reference_Adoption_Agreement_Reviews2</relationshipName>
    <type>Lookup</type>
</CustomField>