force-app/main/default/objects/Reference_Adoption_Agreement_Review__c/fields/FSS__c.field-meta.xml
<CustomField>
    <fullName>FSS__c</fullName>
    <formula>Sales_Rep__r.DSA_FSS__r.FirstName + &apos; &apos; +  Sales_Rep__r.DSA_FSS__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FSS</label>
    <type>Text</type>
</CustomField>