force-app/main/default/objects/Reference_Adoption_Agreement_Review__c/fields/Implementation_Manager__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Implementation Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reference_Adoption_Agreement_Reviews1</relationshipName>
    <type>Lookup</type>
</CustomField>