force-app/main/default/objects/Reference_Adoption_Agreement_Review__c/fields/Is_P_account_listed_in_Case__c.field-meta.xml
<CustomField>
    <fullName>Is_P_account_listed_in_Case__c</fullName>
    <label>Is &quot;P&quot; account listed in Case</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>