force-app/main/default/objects/Reference_Adoption_Agreement_Review__c/fields/Is_Proper_Fee_Based_Level_Comp_ppwk_att__c.field-meta.xml
<CustomField>
    <fullName>Is_Proper_Fee_Based_Level_Comp_ppwk_att__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Proper Fee Based/Lvl Comp pwk att/sig</label>
    <type>Checkbox</type>
</CustomField>