force-app/main/default/objects/Reference_Adoption_Agreement_Review__c/fields/Manual_AA_Notes_Anti_Cutback__c.field-meta.xml
<CustomField>
    <fullName>Manual_AA_Notes_Anti_Cutback__c</fullName>
    <description>To note any requested manual changes that would violate anti-cutback rules</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Manual AA Notes - Anti-Cutback</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>