force-app/main/default/objects/Reference_Adoption_Agreement_Review__c/fields/Match_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Match_Deposit__c</fullName>
    <label>Match Deposit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Per Pay</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>