force-app/main/default/objects/Reference_Adoption_Agreement_Review__c/fields/Plan_Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>Plan_Sequence_Number__c</fullName>
    <label>Plan Sequence Number</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>001</fullName>
            </value>
            <value>
                <fullName>002</fullName>
            </value>
            <value>
                <fullName>003</fullName>
            </value>
            <value>
                <fullName>004</fullName>
            </value>
            <value>
                <fullName>005</fullName>
            </value>
            <value>
                <fullName>006</fullName>
            </value>
            <value>
                <fullName>007</fullName>
            </value>
            <value>
                <fullName>008</fullName>
            </value>
            <value>
                <fullName>009</fullName>
            </value>
            <value>
                <fullName>010</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>