force-app/main/default/objects/Reference_Adoption_Agreement_Review__c/fields/Safe_Harbor_Notes__c.field-meta.xml
<CustomField>
    <fullName>Safe_Harbor_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Safe Harbor Notes</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>