force-app/main/default/objects/Reference_Adoption_Agreement_Review__c/fields/True_Choice_Client__c.field-meta.xml
<CustomField>
    <fullName>True_Choice_Client__c</fullName>
    <label>True Choice Client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>