force-app/main/default/objects/Reference_Adoption_Agreement_Review__c/fields/Verify_FED_ID__c.field-meta.xml
<CustomField>
    <fullName>Verify_FED_ID__c</fullName>
    <label>Verify FED ID</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>