force-app/main/default/objects/Reference_Adoption_Agreement_Review__c/fields/Years_of_Elig_Service_PreTax__c.field-meta.xml
<CustomField>
    <fullName>Years_of_Elig_Service_PreTax__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Years of Elig Service Req (Pre Tax)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>