force-app/main/default/objects/Reference_Adoption_Agreement_Review__c/recordTypes/HRS_4S_FSS_Review.recordType-meta.xml
<RecordType>
    <fullName>HRS_4S_FSS_Review</fullName>
    <active>true</active>
    <label>HRS 4S FSS Review</label>
</RecordType>