force-app/main/default/objects/Reference_Adoption_Agreement_Review__c/recordTypes/Reference_Adoption_Agreement_Review_Layout.recordType-meta.xml
<RecordType>
    <fullName>Reference_Adoption_Agreement_Review_Layout</fullName>
    <active>true</active>
    <label>Reference Adoption Agreement Review Layout</label>
</RecordType>