force-app/main/default/objects/Reference_Adoption_Agreement_Review__c/validationRules/Auto_Increase_Increment_if_Auto_Enroll.validationRule-meta.xml
<ValidationRule>
    <fullName>Auto_Increase_Increment_if_Auto_Enroll</fullName>
    <active>true</active>
    <description>If Auto Increase is Yes, the user must enter an Annual Auto Increase Increment</description>
    <errorConditionFormula>AND(ISPICKVAL(Auto_Increase__c, &apos;Yes&apos;), ISNULL(Annual_Auto_Increase_Increment__c))</errorConditionFormula>
    <errorMessage>You must enter a value in Annual Auto Increase Increment if Auto Increase is Yes.</errorMessage>
</ValidationRule>