force-app/main/default/objects/Reference_Adoption_Agreement_Review__c/validationRules/Enter_Base_Percent_if_Auto_Enroll_is_Yes.validationRule-meta.xml
<ValidationRule>
    <fullName>Enter_Base_Percent_if_Auto_Enroll_is_Yes</fullName>
    <active>true</active>
    <description>The user must enter an Auto Enrollment Base Percent if the Auto Enroll Newly Eligible Employees = Yes</description>
    <errorConditionFormula>AND(ISPICKVAL(Auto_Enroll_Newly_Eligible_Employees__c, &apos;Yes&apos;), ISNULL(Auto_Enrollment_Base_Percent__c ))</errorConditionFormula>
    <errorMessage>You must enter an Auto Enrollment Base Percent if the Auto Enroll Newly Eligible Employees = Yes</errorMessage>
</ValidationRule>