force-app/main/default/objects/Reference_Adoption_Agreement_Review__c/validationRules/Multiple_Loans_value_if_Loans_Permitted.validationRule-meta.xml
<ValidationRule>
    <fullName>Multiple_Loans_value_if_Loans_Permitted</fullName>
    <active>true</active>
    <description>The user must select a value for Multiple Loans if Loans Permitted = Yes</description>
    <errorConditionFormula>AND(ISPICKVAL(Loans_Permitted__c, &apos;Yes&apos;),(ISPICKVAL(Multiple_Loans__c, &apos;&apos;)))</errorConditionFormula>
    <errorMessage>You must select a value for Multiple Loans Permitted if Loans Permitted is Yes.</errorMessage>
</ValidationRule>